--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@ Registered in 2014, Abhinav Food Products has gained immense expertise in supply
 </H3>
 </center>
 <hr>
+  <center>
+    <h1>
 <a href="order.html">ORDER</a>
+      <br>
 <a href="product.html">PRODUCT</a>
-
+    </h1>
+  </center>
 </body>
 </html>
