--- a/order.html
+++ b/order.html
@@ -23,8 +23,13 @@ Address-Balugoda road
 District-Tinsukia
 State-Assam
 <HR>
+  <center>
+    <H1>
 <a href="index.html">HOME</a>
+      <br>
 <a href="product.html">PRODUCT</a>
+    </H1>
+  </center>
 </body>
 </html>
 
