--- a/product.html
+++ b/product.html
@@ -37,8 +37,13 @@ The biscuits are really soft.So that makes them even more tastier.
 <HR>
 <img height=35% width=30% src="pic 3.jpg">
 <HR>
+  <center>
+    <h1>
 <a href="index.html">HOME</a>
+      <br>
 <a href="order.html">ORDER</a>
+    </h1>
+  </center>
 </body>
 </html>
 
