--- a/order.html
+++ b/order.html
@@ -30,6 +30,7 @@ State-Assam
 <a href="product.html">PRODUCT</a>
     </H1>
   </center>
+  <marquee>For more details please visit our office</marquee>
 </body>
 </html>
 
