--- a/order.html
+++ b/order.html
@@ -23,14 +23,32 @@ Address-Balugoda road
 District-Tinsukia
 State-Assam
 <HR>
+ <h2>
+   <form>
+     First name:
+     <input type="text"><br>
+     Last name:
+     <input type="text"><br>
+     Address
+     <input type="textarea"><br>
+     Phone number
+    <input type="text"><br>
+     <input type="submit"value="submit">
+   </form>
+  </h2>
+     
+     
+  
+  
   <center>
     <H1>
 <a href="index.html">HOME</a>
       <br>
 <a href="product.html">PRODUCT</a>
-    </H1>
-  </center>
-  <marquee>For more details please visit our office</marquee>
+     </H1>
+  </center>  
+  <h3>
+    <marquee>For more details please visit our office</marquee></h3>
 </body>
 </html>
 
